--- a/src/infinitycom/Dashboard.form
+++ b/src/infinitycom/Dashboard.form
@@ -510,6 +510,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Remove from list"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="remove_listActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="clear_all">
                   <Properties>
@@ -529,7 +532,7 @@
                     <Component class="javax.swing.JTable" name="p_list">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="5" rowCount="4">
+                          <Table columnCount="5" rowCount="0">
                             <Column editable="false" title="Product ID" type="java.lang.Object"/>
                             <Column editable="false" title="Product name" type="java.lang.Object"/>
                             <Column editable="false" title="Quantity" type="java.lang.Object"/>
@@ -570,6 +573,9 @@
                           <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="p_listMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
