--- a/src/infinitycom/Admin_panel.form
+++ b/src/infinitycom/Admin_panel.form
@@ -1374,6 +1374,9 @@
                             </Property>
                             <Property name="text" type="java.lang.String" value="Remove"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stock_removeActionPerformed"/>
+                          </Events>
                         </Component>
                       </SubComponents>
                     </Container>
